--- a/allcabs/allcabs/Base.lproj/Main.storyboard
+++ b/allcabs/allcabs/Base.lproj/Main.storyboard
@@ -144,7 +144,7 @@
                                 <rect key="frame" x="0.0" y="33" width="600" height="567"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="99" id="RCN-Up-sLo" customClass="friendListCell" customModule="allcabs" customModuleProvider="target">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="95" id="RCN-Up-sLo" customClass="friendListCell" customModule="allcabs">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="RCN-Up-sLo" id="8Kx-Ke-TFn">
