Updated website with RideGuard descriptions

--- a/WebApp/Resources/carousel.css
+++ b/WebApp/Resources/carousel.css
@@ -3,8 +3,9 @@
 /* Padding below the footer and lighter body text */
 
 body {
-  padding-bottom: 40px;
-  color: #5a5a5a;
+  font-family: 'Tahoma';
+  padding-bottom: 20px;
+  color: #757562;
 }
 
 
@@ -13,12 +14,12 @@ body {
 
 /* Special class on .container surrounding .navbar, used for positioning it into place. */
 .navbar-wrapper {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 20;
+  position: relative;
+  margin-top 20px;
+  margin-bottom: -100px;
+  z-index: 10;
 }
+
 
 /* Flip around the padding for proper display in narrow viewports */
 .navbar-wrapper > .container {
@@ -39,8 +40,8 @@ body {
 
 /* Carousel base class */
 .carousel {
-  height: 500px;
-  margin-bottom: 60px;
+  height: 750px;
+  margin-bottom: 50px;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
@@ -49,15 +50,14 @@ body {
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  height: 500px;
-  background-color: #777;
+  height: 750px;
 }
 .carousel-inner > .item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
+  position: relative;
+ 
+  margin-bottom: 50px;
   min-width: 100%;
-  height: 500px;
+  height: 750px;
 }
 
 
@@ -82,7 +82,7 @@ body {
 ------------------------- */
 
 .featurette-divider {
-  margin: 80px 0; /* Space out the Bootstrap <hr> more */
+  margin: 75px 0; /* Space out the Bootstrap <hr> more */
 }
 
 /* Thin out the marketing headings */
@@ -102,8 +102,8 @@ body {
     margin-top: 20px;
   }
   .navbar-wrapper .container {
-    padding-right: 15px;
-    padding-left: 15px;
+    padding-right: 25px;
+    padding-left: 25px;
   }
   .navbar-wrapper .navbar {
     padding-right: 0;
@@ -112,23 +112,23 @@ body {
 
   /* The navbar becomes detached from the top, so we round the corners */
   .navbar-wrapper .navbar {
-    border-radius: 4px;
+    border-radius: 10px;
   }
 
   /* Bump up size of carousel content */
   .carousel-caption p {
-    margin-bottom: 20px;
-    font-size: 21px;
-    line-height: 1.4;
+    margin-bottom: 50px;
+    font-size: 30px;
+    line-height: 1.5;
   }
 
   .featurette-heading {
-    font-size: 50px;
+    font-size: 30px;
   }
 }
 
 @media (min-width: 992px) {
   .featurette-heading {
-    margin-top: 120px;
+    margin-top: 100px;
   }
 }
