--- a/WebApp/Resources/carousel.css
+++ b/WebApp/Resources/carousel.css
@@ -5,7 +5,8 @@
 body {
   font-family: 'Tahoma';
   padding-bottom: 20px;
-  color: #757562;
+  color: black; 
+  background-color:#DFAF37;
 }
 
 
@@ -41,23 +42,32 @@ body {
 /* Carousel base class */
 .carousel {
   height: 750px;
-  margin-bottom: 50px;
+  margin-bottom: 100px;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
+  margin-bottom:100px;
   z-index: 10;
+}
+
+
+/* Adjusting signup box */
+#signup {
+
+ margin-top: 80px;
+ margin-bottom: 50px;
+
 }
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
+  position:relative;
   height: 750px;
 }
 .carousel-inner > .item > img {
-  position: relative;
- 
-  margin-bottom: 50px;
+  position: relative;   
   min-width: 100%;
-  height: 750px;
+  min-height: 100%;
 }
 
 
@@ -81,17 +91,25 @@ body {
 /* Featurettes
 ------------------------- */
 
+.featurette {
+  padding-top:120px;
+  overflow: hidden;
+}
+
 .featurette-divider {
-  margin: 75px 0; /* Space out the Bootstrap <hr> more */
+  margin: 80px 0; /* Space out the Bootstrap <hr> more */
 }
 
 /* Thin out the marketing headings */
 .featurette-heading {
+  font-size:50px
   font-weight: 300;
   line-height: 1;
   letter-spacing: -1px;
 }
-
+.featurette-image {
+  margin-top: -120px;
+}
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
@@ -115,11 +133,18 @@ body {
     border-radius: 10px;
   }
 
+  /*Bump up size of header content*/
+  .carousel-caption h1 {
+    font-size: 40px;
+
+
+  }
+
   /* Bump up size of carousel content */
   .carousel-caption p {
-    margin-bottom: 50px;
+   
     font-size: 30px;
-    line-height: 1.5;
+    line-height: 2;
   }
 
   .featurette-heading {
