--- a/WebApp/Resources/carousel.css
+++ b/WebApp/Resources/carousel.css
@@ -45,7 +45,7 @@ body {
 
 /* Carousel base class */
 .carousel {
-  height: 650px;
+  height: 700px;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
@@ -61,7 +61,7 @@ body {
 /* Declare heights because of positioning of img element */
 .carousel .item {
   position:relative;
-  height: 650px;
+  height: 700px;
 }
 .carousel-inner > .item > img {
   position: relative;   
@@ -143,8 +143,9 @@ margin-bottom: 100px;
 
   /*Bump up size of header content*/
   .carousel-caption h1 {
-    font-size: 50px;
+    font-size: 60px;
     padding: 40px;
+    padding-left: 100px;
   }
 
   /* Bump up size of carousel content */
