--- a/WebApp/Resources/carousel.css
+++ b/WebApp/Resources/carousel.css
@@ -59,8 +59,8 @@ body {
 }
 
 #logo {
-  margin-bottom: 150px;
-  margin-left: 50px;
+  margin-bottom: 70px;
+  margin-left: 80px;
 }
 
 /* Declare heights because of positioning of img element */
@@ -149,8 +149,8 @@ margin-bottom: 100px;
   /*Bump up size of header content*/
   .carousel-caption h1 {
     font-size: 60px;
-    padding: 40px;
-    padding-left: 100px;
+    padding-bottom: 60px;
+    padding-left: 80px;
   }
 
   /* Bump up size of carousel content */
