Routes end when destination reached, in theory propogates bak to server

--- a/allcabs/allcabs/Base.lproj/Main.storyboard
+++ b/allcabs/allcabs/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="YSi-Em-u2n">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14C2043" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="YSi-Em-u2n">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
         <!--Menu-->
         <scene sceneID="A4p-3J-YHM">
             <objects>
-                <tableViewController clearsSelectionOnViewWillAppear="NO" id="zw9-od-OJD" customClass="MenuTableViewController" customModule="allcabs" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController clearsSelectionOnViewWillAppear="NO" id="zw9-od-OJD" customClass="MenuTableViewController" customModule="Helm" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Cda-jR-fly">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -27,7 +27,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Cancel Current Route" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eh8-yu-kOt">
                                                     <rect key="frame" x="70" y="11" width="202" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -41,7 +41,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Share" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m4v-qI-35k">
                                                     <rect key="frame" x="69" y="11" width="202" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="share.png" translatesAutoresizingMaskIntoConstraints="NO" id="FqF-8A-Zop">
@@ -89,7 +89,7 @@
         <!--Share View Controller-->
         <scene sceneID="M3Q-qi-go3">
             <objects>
-                <viewController storyboardIdentifier="Share View Controller" id="RPI-Go-8v0" customClass="ShareViewController" customModule="allcabs" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Share View Controller" id="RPI-Go-8v0" customClass="ShareViewController" customModule="Helm" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="0FN-Lj-U8e"/>
                         <viewControllerLayoutGuide type="bottom" id="XJm-hx-bue"/>
@@ -174,7 +174,7 @@
         <!--First-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
-                <viewController id="9pv-A4-QxB" customClass="FirstViewController" customModule="allcabs" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="9pv-A4-QxB" customClass="FirstViewController" customModule="Helm" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="First" image="first" id="acW-dT-cKf"/>
                     <navigationItem key="navigationItem" id="erp-5r-kKX">
                         <nil key="title"/>
@@ -207,7 +207,7 @@
         <!--Google Places Autocomplete View Controller-->
         <scene sceneID="hRO-2q-Syv">
             <objects>
-                <tableViewController storyboardIdentifier="googlePlacesAutocompleteViewController" id="1Y3-D9-3L7" customClass="GooglePlacesAutocompleteViewController" customModule="allcabs" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="googlePlacesAutocompleteViewController" id="1Y3-D9-3L7" customClass="GooglePlacesAutocompleteViewController" customModule="Helm" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="x6i-4n-0eh">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -233,7 +233,7 @@
         <!--Friend List-->
         <scene sceneID="Yvp-gA-afp">
             <objects>
-                <viewController id="VEO-Ce-Byb" customClass="friendList" customModule="allcabs" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="VEO-Ce-Byb" customClass="friendList" customModule="Helm" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="uHs-ZS-aEd"/>
                         <viewControllerLayoutGuide type="bottom" id="Fn2-Qd-RvO"/>
@@ -258,7 +258,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rt5-hK-0nH">
                                                     <rect key="frame" x="106" y="10" width="196" height="73"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9gK-TD-jcX">
@@ -292,7 +292,7 @@
         <!--View Controller-->
         <scene sceneID="fwk-6a-05N">
             <objects>
-                <viewController id="bnr-NZ-lBZ" customClass="FBViewController" customModule="allcabs" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="bnr-NZ-lBZ" customClass="FBViewController" customModule="Helm" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Kqk-42-aJP"/>
                         <viewControllerLayoutGuide type="bottom" id="h97-x0-4Ja"/>
